RESOLVED FIXED121961
[Qt] Fix force_static_libs_as_shared in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=121961
Summary [Qt] Fix force_static_libs_as_shared in WebKit2
Allan Sandfeld Jensen
Reported 2013-09-26 09:37:37 PDT
force_static_libs_as_shared has been disabled for some time because WebKit2 does not build with it enabled.
Attachments
Patch (4.69 KB, patch)
2013-09-26 09:41 PDT, Allan Sandfeld Jensen
no flags
Patch (4.01 KB, patch)
2013-09-27 04:38 PDT, Allan Sandfeld Jensen
no flags
Patch (2.32 KB, patch)
2013-09-30 04:14 PDT, Allan Sandfeld Jensen
no flags
Patch (8.47 KB, patch)
2013-09-30 05:14 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2013-09-26 09:41:55 PDT
Allan Sandfeld Jensen
Comment 2 2013-09-27 04:38:45 PDT
Csaba Osztrogonác
Comment 3 2013-09-27 04:41:59 PDT
Comment on attachment 212797 [details] Patch rs=me.
Allan Sandfeld Jensen
Comment 4 2013-09-27 05:15:10 PDT
Comment on attachment 212797 [details] Patch Clearing flags on attachment: 212797 Committed r156535: <http://trac.webkit.org/changeset/156535>
Allan Sandfeld Jensen
Comment 5 2013-09-27 05:15:15 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 6 2013-09-30 02:27:15 PDT
(In reply to comment #4) > (From update of attachment 212797 [details]) > Clearing flags on attachment: 212797 > > Committed r156535: <http://trac.webkit.org/changeset/156535> It seems something went wrong, because it broke the MIPS build.
Allan Sandfeld Jensen
Comment 7 2013-09-30 03:43:24 PDT
Yes, I was missing one part.
Allan Sandfeld Jensen
Comment 8 2013-09-30 04:14:40 PDT
Early Warning System Bot
Comment 9 2013-09-30 04:18:24 PDT
Allan Sandfeld Jensen
Comment 10 2013-09-30 04:33:50 PDT
Comment on attachment 212976 [details] Patch Untagging for review. This has a typo and is essentially just emptying webkit2qml, so we might as well remove webkit2qml.
Allan Sandfeld Jensen
Comment 11 2013-09-30 05:14:50 PDT
Csaba Osztrogonác
Comment 12 2013-09-30 08:21:21 PDT
Comment on attachment 212983 [details] Patch rs=me
WebKit Commit Bot
Comment 13 2013-09-30 09:29:31 PDT
Comment on attachment 212983 [details] Patch Clearing flags on attachment: 212983 Committed r156658: <http://trac.webkit.org/changeset/156658>
WebKit Commit Bot
Comment 14 2013-09-30 09:29:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.