[Qt] Fix force_static_libs_as_shared in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=121961

Reviewed by Csaba Osztrogonác.

Source/WebKit/qt:

* WebCoreSupport/QWebFrameAdapter.h:

Source/WebKit2:

Do not add strict ordering for webkit2qml. It is not needed and causes
Target.pri to be built out of order.

* WebKit2.pro:

Tools:

Reenable force_static_libs_as_shared when building WebKit2.

* qmake/mkspecs/features/default_post.prf:

Canonical link: https://commits.webkit.org/140035@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156535 268f45cc-cd09-0410-ab3c-d52691b4dbfc