Source/WebKit/qt/WebCoreSupport/QWebFrameAdapter.h
@@ -22,6 +22,7 @@
 
 #include "FrameLoaderClientQt.h"
 #include "PlatformEvent.h"
+#include "PlatformExportMacros.h"
 #if ENABLE(ORIENTATION_EVENTS) && HAVE(QTSENSORS)
 #include "qorientationsensor.h"
 #endif // ENABLE(ORIENTATION_EVENTS).
